--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "Will Russell"
-email: fellowship@mlh.io
+title: "Kurvesh Patel"
+email: kuru.learning@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Final Year Computer Science Student. Knows Little programming. 
+  Not a fan of Machine Learning(as of now).
+  Summer Intern '20 at Amazon.
 baseurl: "/" 
-url: "/portfolio-template" 
-twitter_username: mlhacks
-github_username:  mlh-fellowship
+url: "https://totallynotkurvesh.github.io/" 
+twitter_username: kurupatel_
+github_username:  totallynotkurvesh
 
 sass:
   sass_dir: _sass
